// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Function] Tealium - helpers should return restriction StatusList data on eq 1`] = `
[
  1,
  0,
  0,
  1,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`[Function] Tealium - helpers should return tealium data article 1`] = `
{
  "amountOfDaysPublished": 2,
  "authors": [
    "Denise Kühn",
  ],
  "changeDate": "2019-12-11T09:03:47+01:00",
  "channel": "Lifestyle",
  "channelHierarchy": "",
  "channelSponsors": [],
  "commentStatus": "open",
  "contentShortTitle": "Lieber Hand anlegen",
  "contentTitle": "Diese Dinge gehören nicht (!) in die Waschmaschine",
  "createDate": "2019-12-11T09:04:46+01:00",
  "externalSubs": "",
  "fqCurrency": "",
  "fqIsin": "",
  "fqIssuer": "",
  "fqMarket": "",
  "fqSymbol": "",
  "fqType": "Article",
  "fqValor": "",
  "isPrintArticle": 0,
  "keywords": [
    "Waschen",
    "Lifestyle",
    "Leder",
    "Wolle",
    "Sneaker",
  ],
  "loginStatus": false,
  "mainChannel": "Style",
  "nodeId": "259441",
  "pageSponsor": "",
  "pageTitle": "Waschen: Wie reinige ich Seide, Leider und Wolle richtig? | Schweizer Illustrierte",
  "pageType": "Article",
  "preferredUri": "/style/lifestyle/diese-dinge-gehoren-nicht-in-die-waschmaschine",
  "publication": "",
  "publicationDate": "2021-12-22T07:30:00+01:00",
  "restrictionStatus": "free",
  "restrictionStatusList": [],
  "showUpdated": true,
  "source": "",
  "subtypeValue": "",
  "timeToReadLabel": null,
  "timeToReadSec": 0,
  "typeId": "279659",
  "userId": "",
}
`;

exports[`[Function] Tealium - helpers should return tealium data landingpage 1`] = `
{
  "amountOfDaysPublished": 2,
  "authors": [],
  "changeDate": "",
  "channel": "",
  "channelHierarchy": "",
  "channelSponsors": [],
  "commentStatus": "",
  "contentShortTitle": "",
  "contentTitle": "Home",
  "createDate": "",
  "externalSubs": "",
  "fqCurrency": "",
  "fqIsin": "",
  "fqIssuer": "",
  "fqMarket": "",
  "fqSymbol": "",
  "fqType": "LandingPage",
  "fqValor": "",
  "isPrintArticle": 0,
  "keywords": [],
  "loginStatus": false,
  "mainChannel": "",
  "nodeId": "",
  "pageSponsor": "",
  "pageTitle": "Das Beste aus People, Fashion, Beauty, Family und Body & Health. | Schweizer Illustrierte",
  "pageType": "LandingPage",
  "preferredUri": "/home-si",
  "publication": "",
  "publicationDate": "",
  "restrictionStatus": "free",
  "restrictionStatusList": [],
  "showUpdated": "",
  "source": "",
  "subtypeValue": "",
  "timeToReadLabel": null,
  "timeToReadSec": 0,
  "typeId": "235882",
  "userId": "",
}
`;

exports[`[Function] Tealium - helpers should return tealium data landingpage on hz home 1`] = `
{
  "amountOfDaysPublished": 2,
  "authors": [],
  "changeDate": "",
  "channel": "",
  "channelHierarchy": "",
  "channelSponsors": [],
  "commentStatus": "",
  "contentShortTitle": "",
  "contentTitle": "Home",
  "createDate": "",
  "externalSubs": "",
  "fqCurrency": "",
  "fqIsin": "",
  "fqIssuer": "",
  "fqMarket": "",
  "fqSymbol": "",
  "fqType": "LandingPage",
  "fqValor": "",
  "isPrintArticle": 0,
  "keywords": [],
  "loginStatus": false,
  "mainChannel": "",
  "nodeId": "",
  "pageSponsor": "",
  "pageTitle": "Das Beste aus People, Fashion, Beauty, Family und Body & Health. | Schweizer Illustrierte",
  "pageType": "LandingPage",
  "preferredUri": "/home-hz",
  "publication": "",
  "publicationDate": "",
  "restrictionStatus": "free",
  "restrictionStatusList": [
    1,
    0,
    0,
    1,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
    0,
  ],
  "showUpdated": "",
  "source": "",
  "subtypeValue": "",
  "timeToReadLabel": null,
  "timeToReadSec": 0,
  "typeId": "235882",
  "userId": "",
}
`;
